--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+weather.location.api.url=https://api.opencagedata.com/geocode/v1/
+weather.location.api.key=42e8ee231e394fcbbf00ba760bfec189
+weather.forecast.api.url=https://api.open-meteo.com/v1/
