Testcases for CircuitBreaker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,19 @@
 weather.location.api.url=https://api.opencagedata.com/geocode/v1/
 weather.location.api.key=42e8ee231e394fcbbf00ba760bfec189
 weather.forecast.api.url=https://api.open-meteo.com/v1/
+
+# Circuit Breaker for httpService
+resilience4j.circuitbreaker.instances.httpService.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.httpService.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.httpService.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.httpService.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.httpService.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.httpService.event-consumer-buffer-size=10
+
+# Retry for httpService
+resilience4j.retry.instances.httpService.max-attempts=3
+resilience4j.retry.instances.httpService.wait-duration=2000
+
+# TimeLimiter for httpService
+resilience4j.timelimiter.instances.httpService.timeout-duration=2s
+resilience4j.timelimiter.instances.httpService.cancel-running-future=true
