--- a/src/test/resources/application-circuitbreaker.properties
+++ b/src/test/resources/application-circuitbreaker.properties
@@ -1,3 +1,4 @@
+weather.ui.enabled=false
 weather.location.api.url=http://localhost/
 weather.location.api.key=123456
 weather.forecast.api.url=http://localhost/
